updated jumbotron background image and font

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,13 @@
     display: inline-block;
     width: 20%;
 }
+
+#main-title {
+    font-family: 'Faster One', cursive;
+    font-size: 75px;
+}
+
+.jumbotron {
+    background-image: url("../images/train2.gif");
+}
+
